--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a programmable programming language",
   "main": "index.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
