--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a programmable programming language",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ignore-pattern 'dist/*.js' -f codeframe --fix",
     "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bulma": "^0.9.0",
+    "eslint": "^7.3.1",
     "parcel-bundler": "^1.12.4",
     "parsimmon": "^1.13.0"
   }
