--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bulma": "^0.9.0",
+    "codemirror": "^5.55.0",
     "eslint": "^7.3.1",
     "parcel-bundler": "^1.12.4",
     "parsimmon": "^1.13.0"
