--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "codemirror": "^5.55.0",
     "eslint": "^7.3.1",
     "parcel-bundler": "^1.12.4",
-    "parsimmon": "^1.13.0"
+    "parsimmon": "^1.13.0",
+    "regexp.escape": "^1.1.0"
   }
 }
