--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "^7.3.1",
     "parcel-bundler": "^1.12.4",
     "parsimmon": "^1.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "regexp.escape": "^1.1.0"
   }
 }
