Configure eslint react package

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "regexp.escape": "^1.1.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.20.3"
   }
 }
