--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bulma": "^0.9.0",
     "codemirror": "^5.55.0",
+    "fast-deep-equal": "^3.1.3",
     "parcel-bundler": "^1.12.4",
     "parsimmon": "^1.13.0",
     "react": "^16.13.1",
