--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.9.0",
     "codemirror": "^5.55.0",
     "fast-deep-equal": "^3.1.3",
+    "lodash": "^4.17.15",
     "parcel-bundler": "^1.12.4",
     "parsimmon": "^1.13.0",
     "react": "^16.13.1",
