--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a programmable programming language",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint . --ext .ts --ignore-pattern 'dist/*.js' -f codeframe",
+    "lint": "eslint . --ext .ts --ext .js --ext .jsx --ignore-pattern 'dist/*.js' -f codeframe --fix",
     "start": "parcel index.html",
     "build": "parcel build index.html",
     "deploy": "rm -r dist && npm run build && surge dist pl-diner.surge.sh",
