--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ext .ts --ext .js --ext .jsx --ignore-pattern 'dist/*.js' -f codeframe --fix",
+    "tsc": "tsc --noEmit",
     "start": "parcel index.html",
     "build": "parcel build index.html",
     "deploy": "rm -r dist && npm run build && surge dist pl-diner.surge.sh",
