--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/react": "^16.9.43",
+    "array-includes": "^3.1.1",
     "bulma": "^0.9.0",
     "codemirror": "^5.55.0",
     "fast-deep-equal": "^3.1.3",
