--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/codemirror": "0.0.97",
     "@types/jest": "^26.0.5",
     "@types/parsimmon": "^1.10.2",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
