--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bulma": "^0.9.0",
     "codemirror": "^5.55.0",
     "fast-deep-equal": "^3.1.3",
+    "immutable": "^4.0.0-rc.12",
     "parcel-bundler": "^1.12.4",
     "parsimmon": "^1.13.0",
     "react": "^16.13.1",
