Update project name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "langplz",
+  "name": "syntax-cafe",
   "version": "1.0.0",
   "description": "a programmable programming language",
   "main": "index.js",
