Pass token to surge binary

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
           node-version: 14
       - name: Install deps
         run: npm ci
-      - run: npm run deploy --token ${{ secrets.SURGE_TOKEN }}
+      - run: npm run deploy -- --token ${{ secrets.SURGE_TOKEN }}
