--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,6 @@ jobs:
           node-version: 14
       - name: Install deps
         run: npm ci
+      - name: Build the site
+        run: npm run build
       - run: npm run deploy -- --token ${{ secrets.SURGE_TOKEN }}
